--- a/style.css
+++ b/style.css
@@ -1,23 +1,64 @@
- Check out different colors here: https://www.materialpalette.com/ 
-/*colors.css*/
-.box {
-  min-height: 100px;
-  width: 100%;
+ body {
+  width: 90%;
+	height: 90%;
+	background-color: grey;
 }
 
-.deep_purple {
-	  background-color: #4527a0;
-	  min-height:25px;
+.oneblock {
+ background-color: #d39b31; 
+ width: 50%;
+ min-height: 30%;
+ display: inline-block;
+ font-family: Harrow, Impact;
+ font-size: 30px;
+ color:black;
 }
 
-.dark_blue {
-  background-color: #0d47a1;
+.twoblock {
+ background-color: #96782a; 
+ width: 30%;
+ min-height: 30%;
+ display: inline-block;
+ font-family: Harrow, Impact;
+ font-size: 30px;
+ color:black;
 }
 
-.amber {
-  background-color: #ffa000
+.threeblock {
+ background-color: #642a0b ; 
+ width: 18.8%;
+ min-height: 30%;
+ display: inline-block;
+ font-family: Harrow, Impact;
+ font-size: 30px;
+ color:white;
 }
 
-.blue_gray {
-  background-color: #607d8b;
+.fourblock {
+ background-color: #000000; 
+ width: 50%;
+ height: 70%;
+ display: inline-block;
+ font-family: Harrow, Impact;
+ font-size: 30px;
+}
+
+.fiveblock {
+ background-color: #ffffff; 
+ width: 49%;
+ height: 70%;
+ display: inline-block;
+ font-family: Harrow, Impact;
+ font-size: 30px;
+ color: black;
+}
+
+
+p {
+ padding-top: 80px;
+    color: black;
+}
+
+.bottom {
+  padding-top: 250px;
 }
